# rentx/src/modules/cars/useCases/specifications/createSpecification/createSpecificationController.ts
@@ -1,17 +1,22 @@
-import { CreateSpecificationService } from "./createSpecificationService";
-import { Request, Response } from "express";
-import { container } from "tsyringe";
+import { CreateSpecificationService } from './createSpecificationService'
+
+import { Request, Response } from 'express'
+import { container } from 'tsyringe'
 
 class CreateSpecificationController {
   async handle(req: Request, res: Response): Promise<Response> {
-    const { name, description } = req.body;
-    const createSpecificationService = container.resolve(
-      CreateSpecificationService
-    );
+    try {
+      const { name, description } = req.body;
+      const createSpecificationService = container.resolve(
+        CreateSpecificationService
+      );
 
-    await createSpecificationService.execute({ name, description });
+      await createSpecificationService.execute({ name, description });
 
-    return res.status(201).send();
+      return res.status(201).send();
+    } catch (error) {
+      return res.status(500).json({ message: "Specification already exists" });
+    }
   }
 }
 
